# sample_package

./: MANIFEST.in  pyproject.toml  setup.cfg
src/imppkg/: harmonic_mean.c  harmonic_mean.pyx  harmony.py  hello.py
test/: test_harmonic_mean.py
