[metadata]
name = first-python-package
version = 0.0.1
author = my_name
description = A simple python package for learning purpose 
long_description_content_type = very long text 
[options]
package = 
     = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = 
     termcolor>=1.1.0,<2
[options.packages.find]
where = src 
exclude = 
    test*
[options.entry_points]
console_scripts = 
     harmony = imppkg.harmony:main

[tool:pytest]
testpaths = test
addopts = --cov
[coverage:run]
source = imppkg
branch = True 
[coverage:report]
show_missing = True
skip_covered = True
[coverage:paths]
source =
     src/imppkg/
     */site-packages/imppkg

[tox:tox]
isolated_build = True
envlist = py310, py39
[testenv]
deps = 
     pytest
     pytest-cov
commands =
     pytest {posargs}